classic mode results wrap - fixed

--- a/app/stylesheets/search.sass
+++ b/app/stylesheets/search.sass
@@ -26,7 +26,7 @@
     height: 30px
 
   div.searchresult
-    width: 650px
+    width: 620px
     :margin-bottom 0.75em
     h2
       :font-size 1.4em
