--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -181,7 +181,7 @@ img{
 .mobileFooter{
   float: right;
   font-size: .8em;
-
+  padding: 0 0 15px 0;
 }
 
 .floatRight{
@@ -237,15 +237,18 @@ img{
 }
 
 .pad5{
-	padding: 0 5px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 .pad10{
-	padding: 0 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .pad15{
-	padding: 0 15px;
+	padding-left:: 15px;
+  padding-right: 15px;
 }
 
 .textbox1
